--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "express-hello-world",
+  "name": "credibleclassesapi",
   "version": "1.0.0",
-  "description": "Express Hello World on Render",
+  "description": "",
   "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
-  "author": "Render Developers",
-  "license": "MIT",
-  "private": false,
   "scripts": {
     "start": "node app.js"
   },
+  "author": "sunny kumar",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.2",
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=14"
